commiting for good luck

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-host-url=jdbc:postgresql://quizzard.c0nbqj7oncuf.us-east-1.rds.amazonaws.com:5432/postgres?searchpath=quizzard
+host-url=jdbc:postgresql://quizzard.c0nbqj7oncuf.us-east-1.rds.amazonaws.com:5432/postgres?schemaName=quizzard
 username=quizzard_app
 password=revature
