--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
             <version>42.2.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.revature</groupId>
+            <artifactId>wezleys-collections</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
     
 </project>
