--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <groupId>com.revature</groupId>
     <artifactId>quizzard</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -63,11 +64,11 @@
             <version>42.2.12</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.revature</groupId>
-            <artifactId>wezleys-collections</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.revature</groupId>-->
+<!--            <artifactId>wezleys-collections</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
     </dependencies>
     
