--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,18 @@
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
         version="2.5">
 
-    
+<!--This tells tomcat where to find the servlet and what name to register it as. We can use
+        the name of the servlet later to reference this instance.
+        -->
+    <servlet>
+        <servlet-name>userServlet</servlet-name>
+        <servlet-class>com.revature.quizzard.servlet.UserServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>userServlet</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
 
 
 </web-app>
