--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <groupId>com.revature</groupId>
     <artifactId>quizzard</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -58,11 +59,14 @@
             <version>42.2.12</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
-            <groupId>com.revature</groupId>
-            <artifactId>wezleys-collections</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
         </dependency>
+
 
     </dependencies>
     
