--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,5 +24,8 @@
         <url-pattern>/user</url-pattern>
     </servlet-mapping>
 
+    <listener>
+        <listener-class>com.revature.quizzard.servlet.DependencyLoaderListener</listener-class>
+    </listener>
 
 </web-app>
