--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,16 @@
         <url-pattern>/user</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>userServlet</servlet-name>
+        <url-pattern>/flashcard</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>userServlet</servlet-name>
+        <url-pattern>*.data</url-pattern>
+    </servlet-mapping>
+<!--  /user.data  /flashcard.data  /studyset.data  /user/studyset.data  -->
     <listener>
         <listener-class>com.revature.quizzard.servlet.DependencyLoaderListener</listener-class>
     </listener>
