--- a/pom.xml
+++ b/pom.xml
@@ -3,33 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <!--
-        XML = eXtensible Markup Language
-
-            Well-formed: syntactically valid
-
-                The below example is not well formed!
-                <note>
-                    <to>Sean</to>
-                    <from>Wezley</fom>
-                    <heading>Example</heading>
-                </note>
-
-            Valid: well-formed AND compliant with the declared schema definitions
-                + basically, you can't use tag names that the XML file is unaware of
-                + or that you nest elements within other elements in a way that
-                  is compliant with the schema definition
-
-    -->
-
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.revature</groupId>
     <artifactId>quizzard</artifactId>
     <version>1.0</version>
-    <build>
-        <finalName>${project.artifactId}</finalName>
-    </build>
     <packaging>war</packaging>
 
     <properties>
@@ -72,12 +50,14 @@
 <!--            <artifactId>wezleys-collections</artifactId>-->
 <!--            <version>1.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -85,5 +65,24 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <url>http://localhost:8080/manager/text</url>
+                        <server>LocalTomcat</server>
+                        <path>/quizzard</path>
+                        <update>true</update>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
     
 </project>
