--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,18 @@
             <version>1.4.200</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -114,6 +126,8 @@
                     <configuration>
                         <url>http://localhost:8080/manager/text</url>
                         <server>LocalTomcat</server>
+                        <username>maven-tomcat</username>
+                        <password>revature</password>
                         <path>/quizzard</path>
                         <update>true</update>
                     </configuration>
