--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 
     <dependencies>
 
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -40,16 +39,10 @@
         </dependency>
 
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.2.12</version>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>com.revature</groupId>-->
-<!--            <artifactId>wezleys-collections</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
